# METR4202-s2-2022-team17

./: CMakeLists.txt  FK_POE_S.py  IK.py  README.md  inv_kin_pub.py  inv_trans_mtx.py  niall_add_code.py  obstruction.py  package.xml  rot_mtx.py  skw_mtx.py  sqhtoscrew.py  test_niall  trans_mtx_exp.py
CUBE-RT/: CMakeLists.txt  package.xml
CUBE-RT/launch/: DEBUGGER.launch  DEMO.launch  IO.launch  TASK1.launch  TEST.launch
CUBE-RT/scripts/: Gripper_SNODE.py  bash_init  constants.py  gripper_service.py  helpers.py  state_machine.py  task1.py  task3a.py
CUBE-RT/scripts/NOPE/: Gripper_TNODE.py  Grrrrrrrrrrip.py  PositionCam_TNODE.py  StateMachine_TNODE.py  close_gripper.py
dynamixel_interface/config/: controller_config.yaml
dynamixel_interface/launch/: dynamixel_interface_slider.launch
launch/: tester.launch
metr4202_ximea_ros/: README.md
metr4202_ximea_ros/ximea_color/: CMakeLists.txt  README.md  package.xml
metr4202_ximea_ros/ximea_color/include/ximea_cv/: ximea_cv.hpp
metr4202_ximea_ros/ximea_color/src/: example_camera.py  ximea_color_detect.cpp
metr4202_ximea_ros/ximea_ros/: CMakeLists.txt  package.xml
metr4202_ximea_ros/ximea_ros/include/ximea_cv/: ximea_ros.hpp
metr4202_ximea_ros/ximea_ros/launch/: ximea_aruco.launch
metr4202_ximea_ros/ximea_ros/src/: ximea_cv.cpp  ximea_demo.cpp  ximea_ros.cpp
scripts/camera/: quat_to_eul  tf_conversions.py
scripts/kinematics/: Analytical  FK_POE_S.py  inv_kin_pub_analytical.py  motionPlanning.py  rot_mtx.py  sqhtoscrew.py  trans_mtx_exp.py
src/: TEST.py  inv_trans_mtx.py  skw_mtx.py
src/camera/: tf_conversions.py
src/kinematics/: IK.py
