<?xml version="1.0"?>
<package format="2">
  <name> ximea_ros </name>
  <version> 0.0.0 </version>
  <description> ROS Package for XIMEA Cameras </description>
  <maintainer email="miguel.valencia@uq.edu.au">Miguel Marco Valencia</maintainer>

  <license> Apache 2.0 </license>

  <author> Miguel Marco Valencia </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
